fix: align header

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h1,
   display: flex;
   justify-content: space-between;
   gap: 1rem;
-  align-items: start;
+  align-items: center;
   margin-bottom: 2.5rem;
   font-size: 0.875rem;
 }
